# cosmic-ext-applet-claude

./: .gitignore  Cargo.toml  README.md  justfile
data/: dev.m4ul3r.CosmicAppletClaude.desktop  dev.m4ul3r.CosmicExtAppletClaude.desktop
i18n/en/: cosmic_applet_claude.ftl
i18n/sv/: cosmic_applet_claude.ftl
src/: config.rs  lib.rs  localize.rs  main.rs
src/backend/: api.rs  mod.rs  process.rs  stats.rs
